# telegram_vk_pipe_bot

./: .gitignore  README.md  chat_user.py  db_ops.py  pipe.py  quotes.py  sink_bot.py  sync_bot.py  sync_vk_app.py  user.py
codec/: CMakeLists.txt  main.cpp
synchrobot/: __init__.py  chat_user.py  db_ops.py  quotes.py  stats_processing.py  sync_tg_bot.py  sync_vk_app.py
synchrobot/quotes/: random.txt
